Prevent Instaler Page Overflow

--- a/css/admin.css
+++ b/css/admin.css
@@ -4,7 +4,8 @@
 
 .siteorigin-installer-header {
 	background: #f6f6f6;
-	margin: 0 -22px;
+	margin: 0;
+	margin-left: -22px;
 	padding: 15px 30px 0 30px;
 }
 
